--- a/views/fields/checkbox_list.tt
+++ b/views/fields/checkbox_list.tt
@@ -2,15 +2,7 @@
 <div class="form-group">
 [% END %]
   <fieldset class="fieldset"[% IF fieldset_name %] data-name="[% fieldset_name %]"[% END %]>
-    <div class="fieldset__legend">
-      <legend>[% INCLUDE fields/sub/filter.tt value=label; %]</legend>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
+    [% INCLUDE fields/sub/label_fieldset.tt; %]
     <div class="list [% list_class %]">
       <ul class="list__items" id="[% id %]">
         [%
