--- a/views/fields/daterange.tt
+++ b/views/fields/daterange.tt
@@ -2,33 +2,26 @@
 <div class="form-group">
 [% END %]
   <fieldset class="fieldset"[% IF fieldset_name %] data-name="[% fieldset_name %]"[% END %]>
-    <div class="fieldset__legend ">
-      <legend >
-        [% INCLUDE fields/sub/filter.tt value=label; %]
-      </legend>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-  
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
-    
+    [% INCLUDE fields/sub/label_fieldset.tt; %]
     <div class="form-group">
       <div class="input-group input-daterange [% input_class %]">
         [%
           INCLUDE fields/input.tt
-            id          = from.id || "from"
-            name        = from.name || "from"
-            input_class = "input--date input--from  input--datepicker" _ (from.class ? " " _ from.class : "" )
-            label       = from.label || "From"
-            label_class = "hidden"
-            placeholder = "yyyy-mm-dd"
-            value       = from.value
-            filter      = from.filter || "html"
-            type        = "text"
-            hide_group  = 1;
+            id           = from.id || "from"
+            name         = from.name || "from"
+            input_class  = "input--date input--from" _ (from.class ? " " _ from.class : "" )
+            label        = from.label || "From"
+            label_class  = "hidden"
+            label_checkbox_name = ""
+            help_text    = from.help_text
+            popover_body = from.popover_body
+            placeholder  = from.placeholder || "yyyy-mm-dd"
+            value        = from.value
+            filter       = from.filter || "html"
+            is_required  = from.is_required ? 1 : 0
+            is_readonly  = from.is_readonly ? 1 : 0
+            type         = "text"
+            hide_group   = 1;
         %]
         
         <div class="input-group-addon">
@@ -37,16 +30,21 @@
         
         [%
           INCLUDE fields/input.tt
-            id          = to.id || "to"
-            name        = to.name || "to"
-            input_class = "input--date input--to  input--datepicker" _ (to.class ? " " _ to.class : "" )
-            label       = to.label || "To"
-            label_class = "hidden"
-            placeholder = "yyyy-mm-dd"
-            value       = to.value
-            filter      = to.filter || "html"
-            type        = "text"
-            hide_group  = 1;
+            id           = to.id || "to"
+            name         = to.name || "to"
+            input_class  = "input--date input--to" _ (to.class ? " " _ to.class : "" )
+            label        = to.label || "To"
+            label_class  = "hidden"
+            label_checkbox_name = ""
+            help_text    = from.help_text
+            popover_body = from.popover_body
+            placeholder  = to.placeholder || "yyyy-mm-dd"
+            value        = to.value
+            filter       = to.filter || "html"
+            is_required  = to.is_required ? 1 : 0
+            is_readonly  = to.is_readonly ? 1 : 0
+            type         = "text"
+            hide_group   = 1;
         %]
       </div>
     </div>
