--- a/views/fields/input.tt
+++ b/views/fields/input.tt
@@ -13,6 +13,8 @@
   #   input_class = "input--required"
   #   popover_body="this is a popover, that is displayed when the info icon is pressed"
   #   is_required = 0
+  #   is_disabled = 0
+  #   is_readonly = 0
   #   filter = "html" | "html_entity" | ""
   #   tabindex = 1
   #   sub_field = "fields/sub/checkbox.tt"
@@ -30,17 +32,7 @@
 <div class="form-group">
 [% END %]
   <div class="input [% input_class %]">
-    <div class="input__label">
-      <label for="[% id %]"[% IF label_class %] class="[% label_class %]"[% END %]>
-        [% INCLUDE fields/sub/filter.tt value=label; %]
-      </label>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
+    [% INCLUDE fields/sub/label_input.tt; %]
     <div class="input__field">
       <input
         type="[% type %]"
@@ -52,7 +44,8 @@
         tabindex="[% tabindex %]"[% END %][% IF help_text %]
         aria-describedby="[% id %]-help"[% END %][% IF autofocus %]
         autofocus[% END %][% IF is_disabled %]
-        disabled[% END %][% IF is_required %]
+        disabled[% END %][% IF is_readonly %]
+        readonly[% END %][% IF is_required %]
         required
         aria-required="true"[% END %]
       >
