--- a/views/fields/password.tt
+++ b/views/fields/password.tt
@@ -28,15 +28,7 @@
 <div class="form-group">
 [% END %]
   <div class="input [% input_class %]">
-    <div class="input__label">
-      <label for="[% id %]">[% INCLUDE fields/sub/filter.tt value=label; %]</label>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
+    [% INCLUDE fields/sub/label_input.tt; %]
     <div class="input__field">
       <input
         type="password"
