--- a/views/fields/radio.tt
+++ b/views/fields/radio.tt
@@ -5,15 +5,7 @@
 <div class="form-item">
 [% END %]
   <fieldset class="fieldset" >
-    <div class="fieldset__legend ">
-      <legend>[% INCLUDE fields/sub/filter.tt value=label; %]</legend>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
+    [% INCLUDE fields/sub/label_fieldset.tt; %]
     <div class="form-group">
       <div id="[% id %]" class="radio-group radio-group--radio-group [% input_class %]">
         [% FOREACH item IN items %]
