--- a/views/fields/select.tt
+++ b/views/fields/select.tt
@@ -34,15 +34,7 @@
 <div class="form-group">
 [% END %]
   <div class="select dropdown [% select_class %]">
-    <div class="select__label">
-      <label for="btn-[% id %]" id="lbl-[% id %]">[% INCLUDE fields/sub/filter.tt value=label; %]</label>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
+    [% INCLUDE fields/sub/label_input.tt label_type="select"; %]
     <button
       id="btn-[% id %]"
       type="button"
