--- a/views/fields/select_multiple.tt
+++ b/views/fields/select_multiple.tt
@@ -1,62 +1,82 @@
 [% IF ! hide_group %]
 <div class="form-group">
 [% END %]
-  <div class="select-widget multi">
-    <div class="select__label">
-      <label id="[% id %]-label" class="control-label">[% INCLUDE fields/sub/filter.tt value=label; %]</label>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
-    <div class="select-widget-dropdown">
-      <div class="form-control">
-        <ul class="current">
-          <li class="none-selected">[% INCLUDE fields/sub/filter.tt value=placeholder; %]</li>
-          [%- FOREACH item IN items -%]
-          <li data-list-item="[% id %]_[% item.id %]" hidden>
-            <span class="widget-value__value">[% item.name | html_entity %]</span>
-            <button class="close select-widget-value__delete" aria-hidden="true" aria-label="delete" title="delete" tabindex="-1">&times;</button>
+  <fieldset class="fieldset [% fieldset_class %]">
+    [% INCLUDE fields/sub/label_fieldset.tt; %]
+    <div class="select-widget multi">
+      <div class="select-widget-dropdown">
+        <div class="form-control">
+          <ul class="current">
+            <li class="none-selected">[% INCLUDE fields/sub/filter.tt value=placeholder; %]</li>
+            [%
+              FOREACH item IN items;
+                value_hidden = " hidden";
+          
+                IF values AND values.size;
+                  FOREACH value IN values;
+                    IF item.id == value;
+                      value_hidden = "";
+                    END;
+                  END;
+                ELSIF item.id == value;
+                  value_hidden = "";
+                END;
+            %]
+            <li data-list-item="[% id %]_[% item.id %]"[% value_hidden %]>
+              <span class="widget-value__value">[% item.name | html_entity %]</span>
+              <button class="close select-widget-value__delete" aria-hidden="true" aria-label="delete" title="delete" tabindex="-1">&times;</button>
+            </li>
+            [% END %]
+            <li class="search">
+              <input
+                type="search"
+                class="form-control-search"
+                style="width:100px"
+                placeholder="Search..."
+                aria-controls="[% id %]-values-multi"
+                aria-expanded="false"
+                aria-describedby="[% id %]-label"
+              >
+            </li>
+          </ul>
+        </div>
+        
+        <ul hidden class="available "
+            id="[% id %]-values-multi"
+            aria-labelledby="[% id %]-label"
+            [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
+            role="listbox"
+        >
+          <li class="has-noresults" hidden>No results</li>
+          [% FOREACH item IN items %]
+          <li class="answer" role="option">
+            [%
+              checkbox_checked = 0;
+            
+              IF values AND values.size;
+                FOREACH value IN values;
+                  IF item.id == value;
+                    checkbox_checked = 1;
+                  END;
+                END;
+              ELSE;
+                checkbox_checked = item.id == value ? 1 : 0;
+              END;
+            
+              INCLUDE fields/sub/checkbox.tt
+                id          = id _ '_' _ item.id
+                name        = name
+                value       = item.id
+                label       = item.name
+                is_required = 0
+                checked     = checkbox_checked;
+            %]
           </li>
-          [%- END -%]
-          <li class="search">
-            <input
-              type="search"
-              class="form-control-search"
-              style="width:100px"
-              placeholder="Search..."
-              aria-controls="[% id %]-values-multi"
-              aria-expanded="false"
-              aria-describedby="[% id %]-label"
-            >
-          </li>
+          [% END; %]
         </ul>
       </div>
-      
-      <ul hidden class="available "
-          id="[% id %]-values-multi"
-          aria-labelledby="[% id %]-label"
-          [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
-          role="listbox"
-      >
-        <li class="has-noresults" hidden>No results</li>
-        [%- FOREACH item IN items -%]
-        <li class="answer" role="option">
-          [%-
-            INCLUDE fields/sub/checkbox.tt
-              id      = id _ '_' _ item.id
-              name    = name
-              value   = item.id
-              label   = item.name
-              checked = item.id == value;
-          -%]
-        </li>
-        [%- END; -%]
-      </ul>
     </div>
-  </div>
+  </fieldset>
 [% IF ! hide_group %]
 </div>
 [% END %]
