--- a/views/fields/sub/checkbox.tt
+++ b/views/fields/sub/checkbox.tt
@@ -13,7 +13,7 @@
     [%- IF is_disabled -%]disabled[%- END -%]
     aria-labelledby="[% id %]-label"
   >
-  <label for="[%- id -%]" id="[% id %]-label">
+  <label for="[%- id -%]" id="[% id %]-label" class="checkbox-label">
     [% IF label_in_span %]<span>[% END %][% INCLUDE fields/sub/filter.tt value=label; %][% IF label_in_span %]</span>[% END %]
   </label>
   [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
