--- a/views/fields/textarea.tt
+++ b/views/fields/textarea.tt
@@ -13,6 +13,8 @@
   #   input_class = "input--required"
   #   popover_body="this is a popover, that is displayed when the info icon is pressed"
   #   is_required = 0
+  #   is_disabled = 0
+  #   is_readonly = 0
   #   filter = "html" | "html_entity" | ""
   #   rows = 5
   #   sub_field = ""
@@ -25,15 +27,7 @@
 <div class="form-group">
 [% END %]
   <div class="textarea [% input_class %]">
-    <div class="textarea__label">
-      <label for="[% id %]">[% INCLUDE fields/sub/filter.tt value=label; %]</label>
-      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
-    </div>
-    [% IF help_text %]
-    <p id="[% id %]-help" class="form-text">
-      [% help_text | html %]
-    </p>
-    [% END %]
+    [% INCLUDE fields/sub/label_input.tt label_type="textarea"; %]
     <div class="input__field">
       <textarea
         class="form-control"
@@ -42,7 +36,8 @@
         rows="[% rows %]"
         placeholder="[% INCLUDE fields/sub/filter.tt value=placeholder; %]"[% IF help_text %]
         aria-describedby="[% id %]-help"[% END %][% IF is_disabled %]
-        disabled[% END %][% IF is_required %]
+        disabled[% END %][% IF is_readonly %]
+        readonly[% END %][% IF is_required %]
         required
         aria-required="true"[% END %]
       >[% INCLUDE fields/sub/filter.tt; %]</textarea>
