--- a/views/wizard/table_add.tt
+++ b/views/wizard/table_add.tt
@@ -781,7 +781,8 @@
                           id                = "jstree_demo_div"
                           layout_id         = ''
                           layout_identifier = ''
-                          no_initial_data   = 1;
+                          no_initial_data   = 1
+                          edit_tree         = 1;
                     %]
                   </div>
                 </div>
