--- a/views/navigation/active_pages.tt
+++ b/views/navigation/active_pages.tt
@@ -21,6 +21,8 @@
     "view/clone",
     "bulk",
     "edit", # internal designation for record view, edit
+    "link",
+    "import",
   ];
   edit_table_active_pages = manage_table_active_pages.merge(manage_topics_active_pages, manage_fields_active_pages);
   table_dashboard_active_pages = ["table_index"];
