--- a/views/snippets/header_table_detail.tt
+++ b/views/snippets/header_table_detail.tt
@@ -243,7 +243,7 @@
                 });
               END;
         
-              IF layout_obj.user_can("layout");
+              IF layout_obj.user_can("bulk_import");
                 bulk_action_groups.0.items.push({
                   id     = "",
                   class  = "",
